Fix project title alignment

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -18,6 +18,7 @@
 .Title
 {
 	font-size: 1.1em;
+	text-align: center;
 }
 .Lines
 {
